--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,6 @@
+@import './components/Content/style.scss';
+@import './components/Keyboard/style.scss';
+@import './components/Button/style.scss';
 body {
   background-color: yellow;
 }
