--- a/components/Button/style.css
+++ b/components/Button/style.css
@@ -1,8 +1,23 @@
 .btn {
   width: 40px;
   height: 40px;
-  background-color: #444;
+  background-color: #292C6D;
   color: #fff;
+  font-size: 15px;
+  font-weight: 900;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.5px;
+  box-shadow: 2px 4px 5px #000000;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  border-radius: 5px;
+  border-color: transparent;
+}
+.btn:active {
+  box-shadow: none;
+}
+.btn:hover {
+  background-color: #EC255A;
 }
 .btn.xsm {
   width: 44px;
@@ -11,14 +26,17 @@
   width: 50px;
 }
 .btn.medium {
-  width: 86px;
+  width: 90px;
 }
 .btn.lg {
-  width: 100px;
+  width: 97px;
 }
 .btn.xl {
   width: 330px;
 }
 .btn.dark {
-  background-color: #222;
+  background-color: #161853;
+}
+.btn.dark:hover {
+  background-color: #EC255A;
 }
