--- a/components/Button/style.scss
+++ b/components/Button/style.scss
@@ -1,8 +1,25 @@
 .btn {
   width: 40px;
   height: 40px;
-  background-color: #444;
+  background-color: #292C6D;
   color: #fff;
+  font-size: 15px;
+  font-weight: 900;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.5px;
+  box-shadow: 2px 4px 5px #000000;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  border-radius: 5px;
+  border-color: transparent;
+
+  &:active {
+    box-shadow: none;
+  }
+
+  &:hover {
+    background-color: #EC255A;
+  }
 
   &.xsm {
     width: 44px;
@@ -13,11 +30,11 @@
   }
 
   &.medium {
-    width: 86px;
+    width: 90px;
   }
 
   &.lg {
-    width: 100px;
+    width: 97px;
   }
 
   &.xl {
@@ -25,7 +42,11 @@
   }
 
   &.dark {
-    background-color: #222;
+    background-color: #161853;
+
+    &:hover {
+      background-color: #EC255A;
+    }
   }
 }
 
