--- a/components/Content/style.css
+++ b/components/Content/style.css
@@ -1,4 +1,8 @@
 .content {
-  max-width: 715px;
+  padding: 40px;
+  width: 715px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
