--- a/style.css
+++ b/style.css
@@ -56,11 +56,13 @@
   border-radius: 5px;
   border-color: transparent;
 }
-.btn:active {
-  box-shadow: none;
-}
 .btn:hover {
   background-color: #EC255A;
+}
+.btn:active, .btn.active {
+  box-shadow: none;
+  background-color: #EC255A;
+  background-color: #b5103c;
 }
 .btn.xsm {
   width: 44px;
@@ -82,6 +84,10 @@
 }
 .btn.dark:hover {
   background-color: #EC255A;
+}
+.btn.dark:active, .btn.dark.active {
+  box-shadow: none;
+  background-color: #b5103c;
 }
 
 .description {
