--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@
 }
 
 .btn {
+  outline: none;
+  border: none;
   width: 40px;
   height: 40px;
   background-color: #292C6D;
@@ -62,7 +64,11 @@
 .btn:active, .btn.active {
   box-shadow: none;
   background-color: #EC255A;
-  background-color: #b5103c;
+  background-color: #9d0e34;
+}
+.btn.selected {
+  background-color: #EC255A;
+  border-radius: 44px;
 }
 .btn.xsm {
   width: 44px;
@@ -87,7 +93,14 @@
 }
 .btn.dark:active, .btn.dark.active {
   box-shadow: none;
-  background-color: #b5103c;
+  background-color: #9d0e34;
+}
+.btn.dark.selected {
+  background-color: #EC255A;
+  border-radius: 44px;
+}
+.btn.dark.selected:hover {
+  background-color: #9d0e34;
 }
 
 .description {
